# pymisha

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  (+2 more)
conda-recipe/: conda_build_config.yaml  meta.yaml
docs/: conf.py  index.md  roadmap.md
hooks/: autorefs_filter.py
pymisha/: __init__.py  _crc64.py  _name_validation.py  _pymisha.pyi  _quadtree.py  _safe_eval.py  _safe_pickle.py  _shared.py  analysis.py  dataset.py  db.py  db_attrs.py  db_create.py  expr.py  extract.py  gdir.py  gsynth.py  intervals.py  liftover.py  lookup.py  sequence.py  summary.py  tracks.py  vtracks.py
src/: BinFinder.cpp  BinsManager.h  BufferedFile.h  DnaPSSM.cpp  GInterval.h  GenomeSeqFetch.cpp  GenomeSeqScorer.h  GenomeTrack.cpp  GenomeTrack.h  GenomeTrackFixedBin.cpp  GenomeTrackFixedBin.h  GenomeTrackSparse.cpp  GenomeTrackSparse.h  KmerCounter.cpp  PMDataFrame.cpp  PMDataFrame.h  PMDb.cpp  PMDb.h  PMFindNeighbors.cpp  PMGsynth.cpp  PMObject.h  PMStubs.cpp  PMTrack2DIndexedFormat.cpp  PMTrackCreate.cpp  PMTrackExpressionIterator.cpp  PMTrackExpressionIterator.h  PMTrackExpressionScanner.cpp  PMTrackExpressionScanner.h  PMTrackExpressionVars.cpp  PMTrackExpressionVars.h  PMTrackIndexedFormat.cpp  PMVTrack.cpp  PMWilcox.cpp  PWMScorer.cpp  PWMScorer.h  QuadTreeReader.cpp  QuadTreeReader.h  Random.h  TGLException.cpp  TGLException.h  (+8 more)
tests/: bench_cpp_perf.py  conftest.py  test_2d_band_cpp.py  test_2d_import_multifile.py  test_2d_iterator.py  test_2d_set_ops.py  test_2d_vtrack_nonag.py  test_2d_vtracks_aggregation.py  test_annotate_tie.py  test_band_intersect.py  test_benchmarks.py  test_cis_decay_perf.py  test_computed_tracks.py  test_dataset_and_alias.py  test_dataset_resolution.py  test_db_admin.py  test_dbs_functions.py  test_dim_param.py  test_expr_aliasing.py  test_fd_safety.py  test_force_range_extra_cols.py  test_gbins.py  test_gcis_decay.py  test_gcor.py  test_gdataset_example.py  test_gdb_cache_dirty.py  test_gdb_convert_to_indexed.py  test_gdb_create.py  test_gdb_export_fasta.py  test_gdb_info.py  test_gdir.py  test_gdist.py  test_gdist_vtrack_streaming.py  test_gextract.py  test_gextract_2d.py  test_gextract_colnames.py  test_gextract_output.py  test_gintervals.py  test_gintervals_constructors.py  test_gintervals_import_genes.py  (+68 more)
tools/: examples.py
(+48 files in other folders)
